--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "babel-plugin-styled-components": "^1.12.0",
     "babel-polyfill": "^6.26.0",
     "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^5.0.1",
     "fork-ts-checker-webpack-plugin": "6.0.1",
     "html-webpack-plugin": "5.0.0-alpha.14",
+    "style-loader": "^2.0.0",
     "typescript": "^4.0.5",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.0",
